<resources>
    <string name="app_name">AccessibilityDemo</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="log_in">LOG IN</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="image_description">Image of person looking at device</string>
</resources>